# openapi-discriminator-allof-demo

./: .gitignore  README.md  generate-schema.sh  main.py  openapi1.yaml  openapi2.yaml  openapi3.yaml  openapi4.yaml  openapi5.yaml  openapi6.yaml  pyproject.toml  run.sh  schemas1.py  schemas2.py  schemas3.py  schemas4.py
test-datamodel-code-generator-python/: deinit.sh  generate-schema.sh  main.py  pyproject.toml  run-test.sh
test-openapi-generator-python/: deinit.sh  generate-schema.sh  init.sh  main.py  pyproject.toml  run-test.sh
test-openapi-python-client/: deinit.sh  generate-schema.sh  main.py  pyproject.toml  run-test.sh
