[project]
name = "codegen-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Zdeněk Tomis",email = "zdnek.tomis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datamodel-code-generator (>=0.35.0,<0.36.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pydantic (>=2.12.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
