[project]
name = "codegen-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Zdeněk Tomis",email = "zdnek.tomis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "datamodel-code-generator (>=0.35.0,<0.36.0)",
    "pydantic (>=2.12.3,<3.0.0)",
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
